# pwndbg

./: .coveragerc  .cspell.json  .dockerignore  .editorconfig  .err.txt  .gitignore  .gitmodules  .isort.cfg  .pylintrc  .readthedocs.yaml  .travis.yml  404.html  CREDITS.md  DEVELOPING.md  Dockerfile  Dockerfile-debian10  Dockerfile-debian11  Dockerfile-ubuntu18-04  Dockerfile-ubuntu20-04  Dockerfile-ubuntu22-04  Dockerfile-unitTests  Dockerfile.arch  Dockerfile.lldb  FEATURES.md  LICENSE.md  Makefile  README.md  binja_script.py  cymbol.py  dev-requirements.txt  docker-compose.yml  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  fix_coding.sh  flake.nix  gdb  gdbinit.py  gef.py  (+24 more)
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  codecov.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-appimage.yml  docker.yml  docs.yml  lint.yml  lock.yml  pending-author-response.yml  publish.yml  releases.yml  tests.yml
about/: index.html
binja_integration/: index.html
blog/: index.html
ci/: build-appimage.sh
commands/: index.html
docker/: Makefile
docker/precise/: Dockerfile  Makefile
docs/: FEATURES.md  FEATURES.src.md  Makefile  binja_integration.md  env_vars.md  gen_doc_images.py  go_debugging.md  index.md  pycharm_debugging.md  requirements.txt  setup.md
docs/blog/: .authors.yml  index.md
docs/commands/: index.md  pwndbg.md
docs/gdb/: __init__.py
docs/source/: api.rst  commands.rst  conf.py  index.rst
docs/stylesheets/: extra.css
docs/theme/: main.html
e2e_tests/: common.py  test_loads.py
env_vars/: index.html
extra/docker/: Dockerfile  Makefile  gdb-build.sh
faq/: index.html
features/: index.html
gef/: __init__.py  arch.py  auxv.py  chain.py  color.py  compat.py  disasm.py  dt.py  elf.py  elf_backup3.py  elf_bakcup.py  enhance.py  events.py  file.py  hexdump.py  info.py  memoize.py  memory.py  old.py  proc.py  regs.py  stack.py  string.py  strings.py  symbol.py  types.py  ui.py  vmmap.py  vmmap_backup.py
gef/commands/: __init__.py  context.py  dt.py  hexdump.py  packing.py  start.py  telescope.py  vmmap.py  windbg.py
go_debugging/: index.html
nix/: devshell.nix  portable.nix  pwndbg.nix  pyenv.nix
nix/bundle/: bundle-linux.sh  bundle-macos.sh  default.nix  nfpm.yaml  pkg.nix  preremove.sh  print_needed_elf.py  relative-path.py
profiling/: .gitignore  benchmark.sh  context.py  print_stats.py  profile.sh  test.c
profiling/benchmark_cache/: README.md  bench.sh  gdbscript1.py  gdbscript2.py
profiling/benchmark_vis_heap_chunks/: README.md  bench.sh  gdbscript.py
pwndbg/: __init__.py  abi.py  android.py  arch.py  arguments.py  argv.py  auxv.py  binja.py  chain.py  checksec.py  color.py  compat.py  config.py  ctypes.py  decorators.py  disasm.py  disasm_powerpc.py  dt.py  dt_backup.txt  elf.py  elftypes.py  enhance.py  events  events.py  exception.py  file.py  funcparser.py  function.py  functions.py  gcc.py  ghidra.py  gitver.py  glibc.py  heap_tracking.py  hexdump.py  ida.py  info.py  integration.py  inthook.py  linkmap.py  (+34 more)
pwndbg/aglib/: __init__.py  arch.py  ctypes.py  dynamic.py  elf.py  file.py  memory.py  nearpc.py  next.py  proc.py  qemu.py  regs.py  remote.py  stack.py  strings.py  tls.py  typeinfo.py  vmmap.py
pwndbg/color/: __init__.py  backtrace.py  chain.py  context.py  disasm.py  enhance.py  hexdump.py  lexer.py  memory.py  message.py  nearpc.py  syntax_highlight.py  telescope.py  theme.py
pwndbg/commands/: __init__.py  addsymbol.py  ai.py  argv.py  aslr.py  asm.py  asmsearch.py  attachp.py  auxv.py  binder.py  binja.py  branch.py  canary.py  chain.py  checksec.py  comments.py  config.py  context.py  cpsr.py  cyclic.py  cymbol.py  defcon.py  dev.py  distance.py  dt.py  dumpargs.py  dxc.py  elf.py  elfheader.py  flags.py  gdbinit.py  gdt.py  ghidra.py  godbg.py  got.py  got_tracking.py  heap.py  heap_tracking.py  hexdump.py  history.py  (+60 more)
pwndbg/constants/: __init__.py  aarch64.py  alpha.py  amd64.py  arm.py  constant.py  i386.py  ia64.py  mallocng.py  mips.py  powerpc.py  powerpc64.py  ptmalloc.py  riscv64.py  s390.py  s390x.py  sparc.py  sparc64.py  thumb.py
pwndbg/dbg/: __init__.py  gdb.py  lldb.py
pwndbg/disasm/: __init__.py  aarch64.py  arch.py  arm.py  color.py  instruction.py  jump.py  mips.py  riscv.py  x86.py
pwndbg/emu/: __init__.py  __init__.pyc.py  emulator.py  emulator.pyc.py  emulatorX.py  x86.py  x86.pyc.py
pwndbg/gdb/: __init__.py  arch.py  hooks.py  typeinfo.py
pwndbg/gdblib/: __init__.py  abi.py  android.py  arch.py  argv.py  backtrace.py  bpoint.py  config.py  ctypes.py  dt.py  dynamic.py  elf.py  events.py  file.py  functions.py  godbg.py  got.py  heap_tracking.py  hooks.py  info.py  (+19 more)
pwndbglib/: __init__.py  abi.py  android.py  arch.py  arguments.py  argv.py  auxv.py  chain.py  config.py  ctypes.py  dt.py  elf.py  elftypes.py  enhance.py  events.py  exception.py  file.py  gcc.py  ghidra.py  hexdump.py  ida.py  info.py  memoize.py  memory.py  net.py  next.py  proc.py  prompt.py  qemu.py  radare2.py  regs.py  remote.py  search.py  stack.py  strings.py  symbol.py  typeinfo.py  ui.py  vmmap.py
pycharm_debugging/: index.html
scripts/: docs-live.sh  docs.py  docs.sh  gen_command_docs.py  gen_ref_pages.py  lint.sh  nix-build.sh  nix-update-flake-lock.sh  release.sh
search/: search_index.json
setup/: index.html
source/: index.html
tests/: __init__.py  common.py  conftest.py  pytests_collect.py  pytests_launcher.py  testLoadsWithoutCrashing.py  test_attachp.py  test_command_distance.py  test_command_errno.py  test_command_ignore.py  test_command_procinfo.py  test_command_telescope.py  test_command_vmmap.py  test_command_xor.py  test_commands.py  test_commands_next.py  test_context_commands.py  test_emulate.py  test_go.py  test_heap.py  test_heap_bins.py  test_hexdump.py  test_loads.py  test_memory.py  test_misc.py  test_mprotect.py  test_rpc.py  test_windbg.py  tests.py  testserver.py  utils.py  xmlhacks.py  xmltest.py
unit_tests/: test_memory.py  test_misc.py
(+1039 files in other folders)
